[tool.poetry]
name = "repl_python3_Masterchef"
version = "0.1.0"
description = ""
authors = ["nbui23 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
bs4 = "^0.0.1"
pandas = "^1.3.5"
pytrends = "^4.7.3"
country-list = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
